<resources>
    <string name="app_name">StatApp</string>
    <string name="log_in">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwd">Password</string>
    <string name="create_group_label">Create Group</string>
    <string name="statistics_label">Statistics</string>
    <string name="show_lessons_label">List Lessons</string>
    <string name="blank_group">"Group : "</string>
    <string name="blank_group_name">Group name can\'t be blank</string>
    <string name="add_student_label">Add Student</string>
    <string name="student_name">Name</string>
    <string name="student_surname">Surname</string>
    <string name="student_email">Email</string>
    <string name="lesson_theme">Theme</string>
    <string name="lesson_time">Time</string>
    <string name="zoom_link">Zoom Link</string>
    <string name="add_lesson_label">Add Lesson</string>
    <string name="save_attendance">Save Attendance</string>
    <string name="attendance">Студент посетил %1$d занятий</string>
</resources>
